2004-04-19  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/watercycle.xml.in: fixed xml
	* src/boards/clickgame.c: (clickgame_start),
	(clickgame_destroy_all_items), (clickgame_create_item),
	(load_random_pixmap): now uses portable readdir enstead of scandir. fixed memory leak.
	* src/gcompris/oggplayer.c: fixed includes headers
	* src/gcompris/soundutil.c: (initSound), (setSoundPolicy),
	(scheduler_bgnd), (scheduler), (get_next_sound_to_play),
	(gcompris_play_ogg_list): changed to use portable gthreads instead of pthreads
	* src/gcompris/soundutil.h: removed PLAY_OVERRIDE_ALL option. It was never used and was hard to
	port to gthreads.

2004-04-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Bugzilla #139771: Strings addition, fixes by Adam Weinberger
	Bugzilla #140045: s/strwaberry/strawberry/ in hexagon.xml.in
	* boards/advanced_colors.xml.in:
	* boards/algebra_by.xml.in:
	* boards/algebra_guesscount.xml.in:
	* boards/algebra_minus.xml.in:
	* boards/algebra_plus.xml.in:
	* boards/algorithm.xml.in:
	* boards/babymatch.xml.in:
	* boards/babyshapes.xml.in:
	* boards/billard.xml.in:
	* boards/canal_lock.xml.in:
	* boards/chess_computer.xml.in:
	* boards/chess_movelearn.xml.in:
	* boards/chess_partyend.xml.in:
	* boards/chronos.xml.in:
	* boards/click_on_letter.xml.in:
	* boards/clickgame.xml.in:
	* boards/clockgame.xml.in:
	* boards/colors.xml.in:
	* boards/doubleentry.xml.in:
	* boards/draw.xml.in:
	* boards/enumerate.xml.in:
	* boards/erase.xml.in:
	* boards/fifteen.xml.in:
	* boards/gcompris_pixmaps.assetml.in:
	* boards/hanoi.xml.in:
	* boards/hexagon.xml.in:
	* boards/imagename.xml.in:
	* boards/leftright.xml.in:
	* boards/maze3D.xml.in:
	* boards/melody.xml.in:
	* boards/memory.xml.in:
	* boards/menu.xml.in:
	* boards/minouche.xml.in:
	* boards/missing_letter.xml.in:
	* boards/money.xml.in:
	* boards/money_cents.xml.in:
	* boards/paintings.xml.in:
	* boards/paratrooper.xml.in:
	* boards/planegame.xml.in:
	* boards/pythontest.xml.in:
	* boards/railroad.xml.in: